# ipb_car_hardware

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
camera-mount/basler/: camera-mount-basler-v1.scad  camera-mount-basler-v1.stl
camera-mount/blackfly/: camera-mount v1.f3d  camera-mount v1.stl  camera-mount v2.f3d  camera-mount v2.stl  camera-mount v3.f3d  camera-mount v3.stl  camera-mount v4.f3d  camera-mount v4.stl
config/: calib.yaml  ipb_car.urdf
ipb_car_hardware/: create_urdf.py
meshes/: basler_camera.dae  car_mount.dae  ouster.dae  passat.dae
sbg-mount/antenna-mount/: README.md  sbg-antenna-v1.scad  sbg-antenna-v1.stl
sbg-mount/imu-mount/: README.md  Y2023_P001_IMU_mount_v2.f3d  Y2023_P001_IMU_mount_v2.stl  sbg-ellipse-v1.scad  sbg-ellipse-v1.stl
