<?xml version="1.0"?>
<package format="2">
    <name>ipb_car_hardware</name>
    <version>0.0.1</version>
    <description>
    Maintaining the hardware models as well as the URDF models from the calibration.
    </description>

    <maintainer email="ivizzo@uni-bonn.de">Ignacio Vizzo</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rviz</exec_depend>
    <exec_depend>tf</exec_depend>

</package>
